<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Depar_btn_txt">Departed</string>
    <string name="Atten_btn_txt">Clock In</string>
    <string name="emp_id_txt">#000000</string>
    <string name="overtime_title">OverTime</string>
    <string name="absence_days">Absence Days</string>
    <string name="emp_department">Depart :</string>
    <string name="clock_in_txt">Clock In</string>
    <string name="Attendance_days">Attend Days</string>
    <string name="emp_id_title">ID :</string>
    <string name="clock_out_txt">clock out</string>
    <string name="morning_greeting">Good Mornning ,</string>
    <string name="delays_title">Delays</string>
    <string name="emp_dapartment_txt">Department</string>
    <string name="register_employee">Regist</string>
    <string name="connect_to_server">Connect to Server</string>
    <string name="hours">Hours</string>
    <string name="connect_name">Connect</string>
    <string name="absence_days_count_in_week">0</string>
    <string name="attend_days_count_in_week">0</string>
    <string name="attend_days_in_week_title">weekly :</string>
    <string name="absence_days_title_in_week">weekly :</string>
    <string name="attend_days_in_month_title">monthly :</string>
    <string name="absence_days_in_month_title">monthly :</string>
    <string name="isAttend_in_day_title">attend :</string>
    <string name="isAttend_yes">✔</string>
    <string name="days">Days</string>
    <string name="ico_description">attend_ico</string>
    <string name="change_theme">Change Theme</string>
    <string name="change_language">Change Language</string>
    <string name="company_name">Re3aya Lab</string>
    <string name="absence_days_count_in_month">0</string>
    <string name="attend_days_count_in_month">0</string>
    <string name="is_absence_in_day">Absence :</string>
    <string name="isAttend_no">✖</string>
    <string name="attend_time">00:00</string>
    <string name="depart_time">00:00</string>
    <string name="overtime_time">00:00</string>
    <string name="delays_time">00:00</string>
    <string name="username_hint">Username</string>
    <string name="Next_txt">Next</string>
    <string name="previous_txt">Back</string>
    <string name="serverPort_hint">Server Port</string>
    <string name="password_hint">Password</string>
    <string name="save_sql_server_credentials">Save SQL Server Credentials</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="work_hours">Work Hours</string>
    <string name="finsh_btn">Finish</string>
    <string name="serverAddress_Card">Server Address</string>
    <string name="Monthly_calendar">Calendar</string>
    <string name="emp_name">Sir</string>
    <string name="evening_greeting">Good_evening ,</string>
    <string name="night_greeting">Good night ,</string>
    <string name="morning_icon">🌞</string>
    <string name="evening_icon">☀️</string>
    <string name="night_icon">🌙</string>
    <string name="total_hours_txt">Total hrs</string>
    <string name="total_hours">00:00</string>
    <string name="attendance_for_this_month">Attendance For This Month</string>
    <string name="your_activity_this_day">Your Activity in this day</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="server_setting">Server Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="date_of_birth">date of birth</string>
    <string name="email_address">email address</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="Welcome_msg">Welcome to Connect, helps you track your attendance, check-ins, delays, and overtime accurately.</string>
    <string name="welcome_sql_img">welcome_sql_image</string>
    <string name="get_start">Get Start</string>
    <string name="likes">Likes</string>
    <string name="server_setting_arrow">go to server setting</string>
    <string name="edit_profile_arrow">go to edit profile</string>
    <string-array name="language_array">
        <item>English</item>
        <item>العربية</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="what_s_on_your_mind">What\'s on your mind ?</string>
    <string name="add_new_post">add_new_post</string>
    <string name="post_recycler_view">post_recycler_view</string>
    <string name="employee_status_recycler_view">employee_status_recycler_view</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="create_post">Create Post</string>
    <string name="post">Post</string>
    <string name="close">Close</string>
    <string name="public_post">Public</string>
    <string name="whats_on_your_mind">What\'s on your mind?</string>
    <string name="add_to_your_post">Add to your post:</string>
    <string name="add_photo">Add Photo</string>
    <string name="tag_people">Tag People</string>
    <string name="feeling">Feeling/Activity</string>
    <string name="check_in">Check In</string>
    <string name="album">Album</string>
    <string name="employee_name">Employee Name</string>
    <string name="profile_title">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="back_btn">back_btn</string>
    <string name="voice_record_button">voice record button</string>
    <string name="text_todo_button">text todo button</string>
    <string name="add_new_todo">add new todo</string>
    <string name="todo_title">Todo Title</string>
    <string name="cancel_recording">cancel recording</string>
    <string name="save_recording">save recording</string>
    <string name="recording_voice">recording voice</string>
    <string name="text_todo_title">Todo title</string>
    <string name="todo_description">Todo description</string>
    <string name="Hello">Hello, %1$s</string>
    <string name="update_button_text">update</string>
    <string name="title_required">Title required</string>
    <string name="record_required">record required</string>
    <string name="tasks_count">You have %1$s active tasks </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="performance_analytics">Performance Analytics</string>
    <string name="distribution_of_days">Distribution of days</string>
    <string name="you_have_uncompleted_tasks">You have %1$s active tasks.</string>
    <string name="id">ID:%1$s</string>
    <string name="_00_00">00:00</string>
    <string name="all">All</string>
    <string name="today">Today</string>
    <string name="active">Active</string>
    <string name="completed">Completed</string>


</resources>