<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:layoutDirection="ltr"
    android:background="@color/card_background"
    >

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- عنوان التودو -->
        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/employeeNameLayout"
        style="@style/outBox_style"
        android:hint="@string/todo_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/voiceTitleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- مؤقت التسجيل -->
    <TextView
        android:id="@+id/recordTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textColor="@color/theme_color"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:visibility="gone" />



    <!-- أزرار الإجراء -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/card_background">
        <!-- زر التسجيل -->
        <ImageButton
            android:id="@+id/recordButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/mic_recorder_ico"
            android:contentDescription="@string/recording_voice"
            app:tint="@color/theme_color"
            android:backgroundTint="@color/transparent"/>

        <TextView
            android:id="@+id/recordingTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="00:00"
            android:textColor="@color/text_primary"
            android:textSize="19sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/cancel_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/voice_cancel_ico"
            android:backgroundTint="@color/transparent"
            app:tint="#FA898A"
            android:contentDescription="@string/cancel_recording"/>

        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/save_recording"
            android:src="@drawable/send_ico"
            app:tint="#1EB86C"
            android:backgroundTint="@color/transparent"/>
    </LinearLayout>

</LinearLayout>
