<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AddPostFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/createPost_topbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="10dp"
        android:background="@null"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:titleTextColor="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_post"
            android:autoSizeTextType="uniform"
            android:textSize="18sp"
            android:textColor="@color/theme_color"
            android:textStyle="bold"
            android:maxHeight="50dp" />

        <Button
            android:id="@+id/add_post_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="add Post"
            android:layout_gravity="end"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:background="@drawable/checkin_btn" />

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:id="@+id/post_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createPost_topbar">

        <androidx.cardview.widget.CardView
            android:id="@+id/employee_info_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:id="@+id/employee_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/employee_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/emp_img"
                    app:shapeAppearanceOverlay="@style/CircleImageView"
                    android:layout_marginEnd="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/employee_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/employee_name"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:focusable="true" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:padding="6dp"
                        android:background="@drawable/toolbar_fram"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/privacy_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="16dp"
                            android:layout_marginStart="8dp"
                            android:src="@drawable/ic_language"
                            app:tint="@color/blue" />

                        <TextView
                            android:id="@+id/tv_privacy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/public_post"
                            android:textColor="@color/blue"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/et_post_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="top|start"
            android:hint="@string/whats_on_your_mind"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="120dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:padding="4dp">


            <ImageButton
                android:id="@+id/btn_tag_people"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/tag_people"
                android:scaleType="centerCrop"
                android:src="@drawable/hashtag" />

            <ImageButton
                android:id="@+id/take_photo"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/tag_people"
                android:scaleType="centerCrop"
                android:src="@drawable/camera2_ico" />

            <ImageButton
                android:id="@+id/btn_add_photo"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/add_photo"
                android:scaleType="centerCrop"
                android:src="@drawable/select_image_ico" />

            <ImageButton
                android:id="@+id/btn_feeling"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/feeling"
                android:scaleType="centerCrop"
                android:src="@drawable/smile_ico" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>