<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".WelcomeFragment">

    <!-- Top Guideline (Adjustable) -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <!-- Bottom Guideline (Adjustable) -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <!-- Welcome Image -->
    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/welcome_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_guideline"
        app:layout_constraintBottom_toTopOf="@id/company_name_text"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.4"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/company_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:text="@string/company_name"
        android:textColor="@color/text_primary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_image"
        app:layout_constraintBottom_toTopOf="@id/description_text"
        app:layout_constraintWidth_percent="0.8" />

    <!-- Description Text -->

    <!-- Next Button -->
    <TextView
        android:id="@+id/description_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:padding="8dp"
        android:text="@string/Welcome_msg"
        android:textAlignment="center"
        android:textColor="@color/text_primary"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/next_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/company_name_text"
        app:layout_constraintVertical_bias="0.192"
        app:layout_constraintWidth_percent="0.9" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/header_profile"
        android:text="@string/get_start"
        app:backgroundTint="#79A9CE"
        app:chainUseRtl="true"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>